--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/adros/git-stats-html",
   "dependencies": {
     "ansi-html-stream": "^0.0.3",
-    "git-stats": "^1.4.0"
+    "git-stats": "^1.4.0",
+    "moment": "^2.9.0"
   },
   "devDependencies": {}
 }
