--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-stats-html",
+  "name": "@gti/git-stats-html",
   "version": "1.0.1",
   "description": "Wrapper for git-stats module, which transforms its output to HTML.",
   "main": "lib/index.js",
