--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ansi-html-stream": "^0.0.3",
     "git-stats": "^1.4.0",
+    "lodash": "^3.5.0",
     "moment": "^2.9.0"
   },
   "devDependencies": {}
